fix: allow all origins in CORS config using setAllowedOriginPatterns
Browser requests from http://158.160.55.234:3000 were rejected with 403
because the hardcoded origin list didn't include the VM's public IP.
Using setAllowedOriginPatterns('*') allows any origin while keeping
allowCredentials=true support.